--- a/frontend/style/components/_components.article.scss
+++ b/frontend/style/components/_components.article.scss
@@ -1,6 +1,6 @@
 .c-article {
   word-wrap: break-word;
-  @include inuit-font-size($font-size-small, $line-height-large );
+  @include inuit-font-size(19px, $line-height-large );
   @include mq($from: tablet) {
     @include inuit-font-size($font-size-normal, $line-height-large );
   }
