--- a/frontend/style/components/_components.longform.scss
+++ b/frontend/style/components/_components.longform.scss
@@ -15,32 +15,32 @@
 }
 
 .c-longform-grid__standard {
-  padding: 0 $spacing-small;
+  padding: 0 $spacing;
   grid-column: 5 / 6;
 }
 
 .c-longform-grid__sidebar-right {
-  padding: 0 $spacing-small;
+  padding: 0 $spacing;
   grid-column: 8 / 10;
 }
 
 .c-longform-grid__medium {
-  padding: 0 $spacing-small;
+  padding: 0 $spacing;
   grid-column: 4 / 7;
 }
 
 .c-longform-grid__large {
-  padding: 0 $spacing-small;
+  padding: 0 $spacing;
   grid-column: 3 / 8;
 }
 
 .c-longform-grid__large-right {
-  padding: 0 $spacing-small;
+  padding: 0 $spacing;
   grid-column: 5 / 8;
 }
 
 .c-longform-grid__larger {
-  padding: 0 $spacing-small;
+  padding: 0 $spacing;
   grid-column: 2 / 9;
 }
 
